# roaring-monad

./: .gitignore  AGENTS.md  Cargo.toml  OPTIMIZATION_LOG.md  OVERNIGHT_EXECUTION_PLAN.md  architecture-impl.md  archive-integration-findings.md  notes.md  production-readiness.md  spec-parity-checklist.md  spec-v2.md  spec.md  workload-generator-architecture.md  workload-sidecar-spec.md
crates/benchmarking/: Cargo.toml
crates/benchmarking/src/: main.rs
crates/finalized-history-query/: Cargo.toml
crates/finalized-history-query/benches/: common.rs  execution_bench.rs  finalized_history_query_bench.rs  materialize_bench.rs  query_clause_loading_bench.rs  query_end_to_end_bench.rs
crates/finalized-history-query/examples/: perf_stress.rs
crates/finalized-history-query/src/: api.rs  block.rs  blocks.rs  codec.rs  config.rs  error.rs  family.rs  lib.rs  primitives.rs  runtime.rs  startup.rs  status.rs  streams.rs  tables.rs  time.rs  traces.rs  txs.rs
crates/finalized-history-query/src/api/: mod.rs  query_logs.rs  service.rs  write.rs
crates/finalized-history-query/src/cache/: hash_map.rs  mod.rs
crates/finalized-history-query/src/codec/: finalized_state.rs  log.rs  log_ref.rs  mod.rs
crates/finalized-history-query/src/core/: clause.rs  directory.rs  directory_resolver.rs  execution.rs  header.rs  ids.rs  layout.rs  mod.rs  offsets.rs  range.rs  runtime.rs  state.rs  types.rs
crates/finalized-history-query/src/domain/: keys.rs  mod.rs  table_specs.rs  types.rs
crates/finalized-history-query/src/gc/: worker.rs
crates/finalized-history-query/src/ingest/: authority.rs  bitmap_pages.rs  engine.rs  indexed_family.rs  mod.rs  open_pages.rs  planner.rs  primary_dir.rs  publication.rs  recovery.rs
crates/finalized-history-query/src/kernel/: blob_table.rs  cache.rs  codec.rs  mod.rs  point_table.rs  scannable_table.rs  sharded_streams.rs  table_specs.rs
crates/finalized-history-query/src/logs/: block_scan.rs  codec.rs  family.rs  filter.rs  index_spec.rs  ingest.rs  keys.rs  log_ref.rs  materialize.rs  mod.rs  query.rs  state.rs  table_specs.rs  types.rs  window.rs
crates/finalized-history-query/src/query/: bitmap.rs  bounds.rs  engine.rs  mod.rs  normalized.rs  planner.rs  runner.rs  stream_family.rs  types.rs  window.rs
crates/finalized-history-query/src/recovery/: mod.rs  startup.rs
crates/finalized-history-query/src/store/: blob.rs  fs.rs  manifest.rs  meta.rs  minio.rs  mod.rs  publication.rs  scylla.rs  traits.rs
crates/finalized-history-query/src/streams/: bitmap_blob.rs  chunk.rs  keys.rs  manifest.rs  mod.rs  writer.rs
crates/finalized-history-query/src/tables/: mod.rs
crates/finalized-history-query/src/traces/: codec.rs  family.rs  filter.rs  ingest.rs  ingest_iter.rs  keys.rs  materialize.rs  mod.rs  state.rs  table_specs.rs  types.rs  view.rs
crates/finalized-history-query/src/txs/: codec.rs  family.rs  filter.rs  ingest.rs  materialize.rs  mod.rs  table_specs.rs  types.rs  view.rs
crates/finalized-history-query/tests/: authority.rs  cache_behavior.rs  crash_injection_matrix.rs  crash_recovery.rs  differential.rs  differential_and_gc.rs  distributed_failure_chaos.rs  distributed_meta_cas.rs  distributed_stores_integration.rs  finalized_index.rs  ingest.rs  ingest_compaction.rs  ingest_edge_cases.rs  publication_authority.rs  query_blocks.rs  query_edge_cases.rs  query_logs.rs  query_semantics.rs  query_traces.rs  query_transactions.rs  recovery.rs  startup.rs  startup_recovery.rs  status.rs  trace_query_semantics.rs
crates/finalized-history-query/tests/helpers/: mod.rs
crates/finalized-log-index/: Cargo.toml
crates/finalized-log-index/benches/: finalized_index_bench.rs
crates/finalized-log-index/examples/: perf_stress.rs
crates/finalized-log-index/src/: api.rs  config.rs  error.rs  lib.rs
crates/finalized-log-index/src/api/: mod.rs  query_logs.rs  service.rs
crates/finalized-log-index/src/codec/: chunk.rs  finalized_state.rs  log.rs  manifest.rs  mod.rs
crates/finalized-log-index/src/core/: mod.rs  page.rs  range.rs  refs.rs  runtime.rs  state.rs
crates/finalized-log-index/src/domain/: filter.rs  keys.rs  mod.rs  types.rs
crates/finalized-log-index/src/gc/: worker.rs
crates/finalized-log-index/src/ingest/: chunk_manager.rs  engine.rs  mod.rs  planner.rs  tail_manager.rs
crates/finalized-log-index/src/lease/: manager.rs
crates/finalized-log-index/src/logs/: block_scan.rs  filter.rs  index_spec.rs  ingest.rs  materialize.rs  mod.rs  query.rs  types.rs  window.rs
crates/finalized-log-index/src/metrics/: counters.rs
crates/finalized-log-index/src/query/: engine.rs  executor.rs  mod.rs  planner.rs
crates/finalized-log-index/src/recovery/: startup.rs
crates/finalized-log-index/src/store/: blob.rs  fs.rs  meta.rs  minio.rs  mod.rs  scylla.rs  traits.rs
crates/finalized-log-index/src/streams/: keys.rs  mod.rs  tail_manager.rs  writer.rs
crates/finalized-log-index/tests/: crash_injection_matrix.rs  differential_and_gc.rs  distributed_failure_chaos.rs  distributed_meta_cas.rs  distributed_stores_integration.rs  finalized_index.rs
crates/log-workload-gen/: Cargo.toml
crates/log-workload-gen/src/: artifact.rs  config.rs  error.rs  generate.rs  lib.rs  pipeline.rs  types.rs
crates/log-workload-gen/src/artifact/: manifest.rs  mod.rs  parquet.rs  trace.rs
crates/log-workload-gen/src/generate/: mod.rs  planner.rs  sampler.rs
crates/log-workload-gen/src/ingest/: block_sequence.rs  consumer.rs  gap_tracker.rs  mod.rs  validator.rs
crates/log-workload-gen/src/runtime/: bounded_queue.rs  mod.rs
crates/log-workload-gen/src/stats/: cooccurrence.rs  key_stats.rs  (+2 more)
crates/log-workload-gen/tests/: artifact_io_tests.rs  config_tests.rs  ingest_validator_tests.rs  pipeline_e2e_tests.rs  run_summary_tests.rs  runtime_bounded_queue_tests.rs  stats_accumulator_tests.rs  trace_generation_tests.rs
(+171 files in other folders)
