[workspace]
members = ["crates/finalized-log-index"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
roaring = "0.11"
futures = "0.3"
criterion = "0.5"
libc = "0.2"
