[workspace]
members = ["crates/finalized-log-index", "crates/log-workload-gen"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
roaring = "0.11"
futures = "0.3"
criterion = "0.5"
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
scylla = "0.15"
aws-config = "1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
serde_json = "1"
sha2 = "0.10"
serde_json_canonicalizer = "0.3"
arrow = "54"
parquet = "54"
hex = "0.4"
tempfile = "3"
