[package]
name = "benchmarking"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }

finalized-log-index = { path = "../finalized-log-index", features = ["distributed-stores"] }
log-workload-gen = { path = "../log-workload-gen" }
monad-archive = { path = "../../../monad-bft/monad-archive" }

[[bin]]
name = "benchmarking"
path = "src/main.rs"
test = false
bench = false
