[package]
name = "finalized-history-query"
version.workspace = true
edition.workspace = true
license.workspace = true
autobenches = false

[features]
default = []
distributed-stores = [
    "dep:tokio",
    "dep:scylla",
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:aws-credential-types",
]

[dependencies]
bytes.workspace = true
futures.workspace = true
roaring.workspace = true
serde.workspace = true
thiserror.workspace = true
rand.workspace = true
quick_cache.workspace = true
alloy-rlp.workspace = true
tokio = { workspace = true, optional = true }
scylla = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }

[dev-dependencies]
futures.workspace = true
criterion.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true

[[bench]]
name = "execution_bench"
harness = false

[[bench]]
name = "materialize_bench"
harness = false

[[bench]]
name = "query_end_to_end_bench"
harness = false
