[package]
name = "finalized-log-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
roaring.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
futures.workspace = true
